# interview

./: .dockerignore  Dockerfile  Gemfile  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
app/controllers/: pricing_controller.rb
config/environments/: production.rb
dynamic-pricing/: Gemfile  README.md  docker-compose.yml
dynamic-pricing/app/controllers/: pricing_controller.rb
dynamic-pricing/app/controllers/api/v1/: pricing_controller.rb
dynamic-pricing/app/services/: base_service.rb
dynamic-pricing/app/services/api/v1/: pricing_service.rb
dynamic-pricing/config/: application.rb  credentials.yml.enc  routes.rb
dynamic-pricing/lib/: rate_api_client.rb
dynamic-pricing/test/: test_helper.rb
dynamic-pricing/test/controllers/: pricing_controller_test.rb
intent_classifier/: .gitignore  .pre-commit-config.yaml  pyproject.toml
sre-assignment/: README.md
sre-assignment/helm/: values.yaml
sre-assignment/helm/templates/: frontend-deployment.yaml  frontend-service.yaml
sre-assignment/terraform/: main.tf  variables.tf
terraform-parse/: NOTES.md  README.md
terraform-parse/helm/: Chart.yaml
terraform-parse/helm/templates/: backend-deployment.yaml
terraform-parse/terraform/: main.tf
test/controllers/: pricing_controller_test.rb
