[project]
name = "intent-classifier-assignment"
version = "0.0.1"
description = "Tripla's assignment based on intent classifier (IC) project written in Pytorch."
authors = [{ name = "Chingis Oinar", email = "chingis@tripla.jp" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
# Dependencies listed in the uv style
dependencies = [
  "beartype >=0.18.5,<0.19",
  "hydra-core >=1.3.2,<2",
  "numpy >=1.26.2,<2",
  "db-dtypes>=1.3.0",
  "pytorch-lightning >=2.0,<3",
  "torchmetrics >=1.4.2,<2",
  "transformers>=4.45.1",
]

[project.optional-dependencies]
dev = ["pytest", "pre-commit==3.8.0"]
cuda = ["onnxruntime-gpu==1.19.0"]
cpu = [
  "onnx==1.16.1",
  "torch @https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.5.1%2Bcpu.cxx11.abi-cp310-cp310-linux_x86_64.whl#sha256=a4d4ca3c47a1e13b35cf00f96e6650bea80f949a74611104583cc48b2ee1a723",
  "onnxruntime==1.20.0",
]
[tool.uv]
dev-dependencies = ["pytest", "pre-commit==3.8.0"]
